# PatchTrail

./: .gitignore  LICENSE  README.md  SUBMISSION.md  implementation_plan.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: examples.yml  release.yml
examples/: README.md  package.json  vitest.config.ts
examples/cart-cache-mid/: cart-cache-mid.test.ts  cart-cache-mid.ts  cart-cache-mid.txt  package.json
examples/cart-cache-mid/fixed/: cart-cache-mid.ts
examples/cart-cache-mid/src/: cart-cache.ts
examples/cart-cache-mid/tests/: regression.test.ts  solution.test.ts
examples/checkout-reliability/: bug-report-transcript.txt  buggy-checkout.test.ts  buggy-checkout.ts  fixture.json  package.json
examples/checkout-reliability/fixed/: buggy-checkout.ts
examples/checkout-reliability/src/: payment-gateway.ts
examples/payment-idempotency-senior/: fixture.json  package.json  payment-idempotency-senior.test.ts  payment-idempotency-senior.ts  payment-idempotency-senior.txt  tsconfig.json
examples/profile-api-junior/: fixture.json  profile-api-junior.test.ts  profile-api-junior.ts  profile-api-junior.txt
examples/task-list-student/: package.json  task-list-student.test.ts  task-list-student.ts  task-list-student.txt
release/: README.md  SHA256SUMS.txt
release/Cuttle-windows-x64/: JUDGE_TESTING.md
release/PatchTrail-windows-x64/: PACKAGE_INFO.txt
src/: App.tsx  index.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: BugDetective.tsx  TaskBoard.tsx  TimeMachine.tsx
(+37 files in other folders)
