[package]
name = "cuttle"
version = "0.1.0"
description = "A local-first engineering workspace for bug triage and safe Git recovery"
authors = ["Cuttle"]
edition = "2021"

[lib]
name = "cuttle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-dialog = "2"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", rev = "c4c45d503ea115a839aae718d02f79e7c7f0f673" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
